<resources>
    <string name="app_name">My Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home Work</string>
    <string name="menu_event">Event</string>
    <string name="menu_perrem">Personal Remarks</string>
    <string name="menu_timtbl">Time Table</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_sett">Settings</string>
    <string name="menu_log">Logout</string>

    <string name="anntxt">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</string>
    <string name="annhed">Kuruksastra</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>