<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_profile">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mydiary.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mydiary.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.mydiary.ui.event.Event"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_event" />
    <fragment
        android:id="@+id/nav_perrem"
        android:name="com.example.mydiary.ui.personalremarks.PersonalRemarks"
        android:label="@string/menu_perrem"
        tools:layout="@layout/fragment_personal_remarks" />
    <fragment
        android:id="@+id/nav_timtbl"
        android:name="com.example.mydiary.ui.timetable.TimeTable"
        android:label="@string/menu_timtbl"
        tools:layout="@layout/fragment_time_table" />
    <fragment
        android:id="@+id/nav_sett"
        android:name="com.example.mydiary.ui.settings.Settings"
        android:label="@string/menu_sett"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_log"
        android:name="com.example.mydiary.ui.logout.Logout"
        android:label="@string/menu_log"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mydiary.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>